New splash screen for forthcoming v4.4. Added import and export for saved folders and connections. Misc UI tweaks - borders, buttons, sizes