@@ -48,8 +48,8 @@ import org.executequery.gui.browser.ColumnData;
 /**
  *
  * @author   Takis Diakoumis
- * @version  $Revision: 1487 $
- * @date     $Date: 2015-08-23 22:21:42 +1000 (Sun, 23 Aug 2015) $
+ * @version  $Revision: 1766 $
+ * @date     $Date: 2017-08-14 23:34:37 +1000 (Mon, 14 Aug 2017) $
  */
 @SuppressWarnings({"unchecked","rawtypes"})
 public class ErdDeleteRelationshipDialog extends ErdPrintableDialog
@@ -282,7 +282,7 @@ public class ErdDeleteRelationshipDialog extends ErdPrintableDialog
             switch(col) {
                 
                 case 0:
-                    return new Boolean(ccd.isDropped());
+                    return Boolean.valueOf(ccd.isDropped());
                     
                 case 1:
                     return cc.getName();
