@@ -29,8 +29,8 @@ import org.underworldlabs.util.SystemProperties;
 /** <p>The Query Editor properties panel.
  *
  *  @author   Takis Diakoumis
- * @version  $Revision: 1512 $
- * @date     $Date: 2015-09-27 21:23:07 +1000 (Sun, 27 Sep 2015) $
+ * @version  $Revision: 1766 $
+ * @date     $Date: 2017-08-14 23:34:37 +1000 (Mon, 14 Aug 2017) $
  */
 public class PropertiesEditorDisplay extends AbstractPropertiesBasePanel {
     
@@ -54,35 +54,35 @@ public class PropertiesEditorDisplay extends AbstractPropertiesBasePanel {
                 UserPreference.BOOLEAN_TYPE,
                 key,
                 "Status bar",
-                new Boolean(SystemProperties.getProperty("user", key))));
+                Boolean.valueOf(SystemProperties.getProperty("user", key))));
         
         key = "editor.display.linenums";
         list.add(new UserPreference(
                 UserPreference.BOOLEAN_TYPE,
                 key,
                 "Line numbers",
-                new Boolean(SystemProperties.getProperty("user", key))));
+                Boolean.valueOf(SystemProperties.getProperty("user", key))));
         
         key = "editor.display.results";
         list.add(new UserPreference(
                 UserPreference.BOOLEAN_TYPE,
                 key,
                 "Results panel",
-                new Boolean(SystemProperties.getProperty("user", key))));
+                Boolean.valueOf(SystemProperties.getProperty("user", key))));
 
         key = "editor.display.linehighlight";
         list.add(new UserPreference(
                 UserPreference.BOOLEAN_TYPE,
                 key,
                 "Current line highlight",
-                new Boolean(SystemProperties.getProperty("user", key))));
+                Boolean.valueOf(SystemProperties.getProperty("user", key))));
 
         key = "editor.display.margin";
         list.add(new UserPreference(
                 UserPreference.BOOLEAN_TYPE,
                 key,
                 "Right margin",
-                new Boolean(SystemProperties.getProperty("user", key))));
+                Boolean.valueOf(SystemProperties.getProperty("user", key))));
 
         key = "editor.margin.size";
         list.add(new UserPreference(
