@@ -402,7 +402,7 @@ class IntHashtableEnumerator implements Enumeration
 	    {
 	    IntHashtableEntry e = entry;
 	    entry = e.next;
-	    return keys ? new Integer( e.key ) : e.value;
+	    return keys ? Integer.valueOf( e.key ) : e.value;
 	    }
 	throw new NoSuchElementException( "IntHashtableEnumerator" );
 	}
